# python-proxytype

./: Makefile  README.md  setup.cfg
.github/workflows/: on_push.yml  on_release.yml  run_bandit.yml  run_tests.yml
preoccupied/proxytype/: __init__.py  mypy.py
tests/: __init__.py  mypy.py
tests/data/: binary.pyi  mypy.cfg  sample.pyi  unary.pyi
