
[metadata]

name = preoccupied.proxytype
version = 0.1.0
description = static typing support for dynamic proxy classes

author = Christopher O'Brien
# O'Brien breaks so many tools

author_email = obriencj@preoccupied.net

copyright_years = 2024

license = GNU General Public License v3 (GPLv3)
license_files =
  LICENSE

long_description = file: README.md
long_description_content_type = text/markdown

home_page = https://github.com/obriencj/python-proxytype

platform = any

project_urls =
  Source = https://github.com/obriencj/python-proxytype
  Issues = https://github.com/obriencj/python-proxytype/issues

classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Software Development :: Build Tools
  Topic :: Utilities


[options]

packages =
  preoccupied.proxytype

zip_safe = False


[tox:tox]

envlist = py{39,310,311}
skip_missing_interpreters = true


[testenv]

commands =
  python -B -m nose

sitepackages = false

deps =
  mypy
  nose-py3

download = true


[nosetests]

all-modules = 1
no-byte-compile = 1
verbosity = 2


# The end.
